@@ -57,6 +57,14 @@ define("tinymce/html/SaxParser", [
 ], function(Schema, Entities, Tools) {
 	var each = Tools.each;
 
+	function trimComments(text) {
+		var sanitizedText = text;
+		while (/<!--|--!?>/g.test(sanitizedText)) {
+			sanitizedText = sanitizedText.replace(/<!--|--!?>/g, '');
+		}
+		return sanitizedText;
+	}
+
 	/**
 	 * Returns the index of the end tag for a specific start tag. This can be
 	 * used to skip all children of a parent element from being processed.
@@ -236,7 +244,7 @@ define("tinymce/html/SaxParser", [
 
 			// Precompile RegExps and map objects
 			tokenRegExp = new RegExp('<(?:' +
-				'(?:!--([\\w\\W]*?)-->)|' + // Comment
+				'(?:!--([\\w\\W]*?)--!?>)|' + // Comment
 				'(?:!\\[CDATA\\[([\\w\\W]*?)\\]\\]>)|' + // CDATA
 				'(?:!DOCTYPE([\\w\\W]*?)>)|' + // DOCTYPE
 				'(?:\\?([^\\s\\/<>]+) ?([\\w\\W]*?)[?/]>)|' + // PI
@@ -443,7 +451,7 @@ define("tinymce/html/SaxParser", [
 
 					self.comment(value);
 				} else if ((value = matches[2])) { // CDATA
-					self.cdata(value);
+					self.cdata(trimComments(value));
 				} else if ((value = matches[3])) { // DOCTYPE
 					self.doctype(value);
 				} else if ((value = matches[4])) { // PI
