@@ -1,5 +1,7 @@
 Version 4.5.12 (2020-07-01)
-  Fixed so links with xlink:href attributes are filtered correctly to prevent XSS. #TINY-6073
+  Fixed so links with xlink:href attributes are filtered correctly to prevent XSS. #TINY-1626
+  Fixed HTML comments incorrectly being parsed in certain cases #TINY-4511
+  Fixed a security issue related to CDATA sanitization during parsing #TINY-4669
 Version 4.5.11 (2019-05-16)
   Fixed bug where the editor would scroll to the top of the editable area if a dialog was closed in inline mode. #TINY-1073
 Version 4.5.10 (2018-10-19)
